fixed a few tiny things like overflow and width of results

--- a/src/index.scss
+++ b/src/index.scss
@@ -28,6 +28,8 @@ a {
 pre {
   margin: 0;
   padding: 0 !important;
+  overflow-x: hidden !important;
+  overflow-y: auto !important;
 }
 
 .disable-select {
